# gemini-deep-research-mcp

./: .env.example  .gitignore  .npmignore  README.md  README.npm.md  README.pypi.md  package.json  pyproject.toml
.github/prompts/: plan-geminiDeepResearchMcp.prompt.md
.github/workflows/: publish.yml
src/gemini_deep_research_mcp/: __init__.py  config.py  extract.py  gemini.py  resolve.py  server.py
tests/: test_extract.py  test_server_output_format.py  test_server_validation.py
