[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-deep-research-mcp"
version = "0.1.3"
description = "MCP server exposing Gemini Deep Research (Interactions API) tools"
readme = "README.pypi.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ayush", email = "ayusin439@gmail.com" }]
keywords = ["mcp", "gemini", "deep-research", "ai", "google", "model-context-protocol", "research", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mcp>=1.2.0",
  "google-genai>=0.6.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/bharatvansh/gemini-deep-research-mcp"
Repository = "https://github.com/bharatvansh/gemini-deep-research-mcp"
Issues = "https://github.com/bharatvansh/gemini-deep-research-mcp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
gemini-deep-research-mcp = "gemini_deep_research_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
